[package]
name = "my-app"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

rocket = "0.4.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]


    
